--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ body.dark #closeBtn {
 }
 
 /* ================= RESPONSIVE ================= */
-@media (max-width: 768px) {
+@media (max-width: 880px) {
   .nav-links {
     display: none;
   }
@@ -322,7 +322,19 @@ body.dark #closeBtn {
     order: 2;
   }
 }
+@media (max-width: 468px){
+    .theme-toggle{
+    width: 50px;
+    margin-right: 20px;
+  }
+}
+@media (max-width: 1054px) and (min-width: 880px){
+.nav-links{
+  font-size: 0.9rem;
+  display: contents;
 
+}
+}
 .hero {
   margin-top: 70px;
   padding: 2rem 1rem;
@@ -366,18 +378,25 @@ body.dark #closeBtn {
 }
 
 /* ✅ Mobile */
-@media (max-width: 480px) {
+@media (max-width: 530px) {
   .headings h1 {
-    font-size: 2rem;
+    font-size: 2.3rem;
     line-height: 1;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 
   .hero-image img {
     width: 90%;
-    margin-top: 20px;
+    /* margin-top: 20px; */
+  }
+  .headings h1:last-of-type {
+      color: #6815FF;
+      position: relative;
+      bottom: 16px;
   }
 }
+
+
     
 .boxes {
   width: 100%;
@@ -579,6 +598,9 @@ body.dark .section-heading {
   margin-top: 10px;
   color: #374151;
 }
+.team-member p{
+  margin: 0;
+}
 
 body.dark .team-member h3 {
   color: #f0f0f0;
@@ -724,13 +746,15 @@ body.dark .footer {
 .footer-left p {
   margin: 5px 0;
   line-height: 1.6;
-  max-width: 357px;
+  max-width: 300px;
   font-size: 0.95rem;
 }
 
 .footer-left h4 {
   margin-top: 20px;
   font-size: 1.1rem;
+      position: relative;
+    top: 20px;
 }
 
 .social-icons {
@@ -765,6 +789,8 @@ body.dark .footer {
 .footer-right h4 {
   margin-bottom: 15px;
   font-size: 1.1rem;
+      position: relative;
+    top: 15px;
 }
 
 .footer-right p {
@@ -806,7 +832,7 @@ body.dark .footer {
   color: white;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .footer-container {
     flex-direction: column;
     align-items: flex-start;
